--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
             <div class="container">
                 <header class="block-heading cleafix">
                     <a href="#" class="btn btn-o btn-lg pull-right">View All</a>
-                    <h1>From the Log</h1>
-                    <p>Keep up with the latest happenings.</p>
+                    <h1>My Log</h1>
+                    <p>Keep up with the latest things.</p>
                 </header>
                 <section class="block-body">
                     <div class="row text-center">
